--- a/publicViews/css/products.css
+++ b/publicViews/css/products.css
@@ -7,7 +7,7 @@ body {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: rgb(44, 39, 70);
+  background-color: rgb(38, 39, 71);
   padding-left: 5;
 }
 
@@ -16,6 +16,7 @@ body {
   margin: 1rem;
   padding: 0%;
   display: flex;
+  color: rgb(105, 105, 105);
 }
 .main-header_listItem {
   margin: 0%;
@@ -23,7 +24,7 @@ body {
 }
 
 .main-header_listItem a {
-  color: rgb(230, 230, 230);
+  color: rgb(94, 39, 39);
   text-decoration: none;
   margin: 1rem;
 }
@@ -43,42 +44,23 @@ body {
 main {
   padding: 1rem;
 }
-
-.formControl label,
-.formControl input {
-  display: block;
-  color: rgb(44, 39, 70);
-}
-
-.formControl input {
-  border-color: 3px rgb(138, 138, 138);
-  font: inherit;
-  border-radius: 5px;
-
-}
-
-button {
-  font: inherit;
-  color: rgb(224, 224, 224);
-  border-color: 1px rgb(73, 73, 45);
-  background-color: rgb(56, 67, 77);
-  cursor: pointer;
-  padding: 5%;
-}
-button :hover,
-button:active,
-button:active {
-  background-color: aquamarine;
-}
-.formControl {
-  margin: 1rem 0;
-}
-
-.productForm {
-  width: 20rem;
-  max-width: 90%;
-  margin: auto;
-}
 .body {
-  background-color: rgb(234, 234, 234);
+  background-color: rgb(239, 239, 239);
+}
+.main-header_listItem a {
+  color: rgb(238, 226, 232);
+  text-decoration: none;
+  margin: 1rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  margin: 1rem;
+  border: 1px solid rgb(194, 194, 194);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 10px rgba(0, 0, 0);
 }
