chore: change shop to home :zap:

--- a/views/adminForm.html
+++ b/views/adminForm.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <nav class="main-header_nav">
         <ul class="main-header_itemList">
-          <li class="main-header_listItem"><a href="/">Shop</a></li>
+          <li class="main-header_listItem"><a href="/">Home</a></li>
           <li class="main-header_listItem"
             ><a class="active" href="add-product">Add Product</a></li
           >
