--- a/views/cart.html
+++ b/views/cart.html
@@ -13,7 +13,7 @@
       <nav class="main-header_nav">
         <ul class="main-header_itemList">
           <li class="main-header_listItem"
-            ><a class="active" href="/">Shop</a></li
+            ><a class="active" href="/">Home</a></li
           >
           <li class="main-header_listItem"
             ><a href="add-product">Add Product</a></li
