--- a/views/addProduct.html
+++ b/views/addProduct.html
@@ -25,8 +25,8 @@
     <main>
       <form class="productForm" action="/added-products" method="POST">
         <div class="formControl">
-          <h1><label for="title">Input your Product here:</label></h1>
-          <h1><input type="text" name="Product name" id="title" /></h1
+          <h1><label for="inputProduct">Input your Product here:</label></h1>
+          <h1><input type="text" name="productName" id="productName" /></h1
         ></div>
 
         <button type="submit">Add Product</button>
