--- a/publicViews/css/main.css
+++ b/publicViews/css/main.css
@@ -1,54 +1,101 @@
-
 body {
-    padding: 0%;
-    margin: 0%;
-  }
+  padding: 0;
+  margin: 0;
+}
 
-  .main-header {
-    width: 100%;
-    height: 3.5rem;
-    background-color: rgb(38, 39, 71);
-    padding-left: 5;
-  }
+.main-header {
+  width: 100%;
+  height: 3.5rem;
+  background-color: rgb(38, 39, 71);
+  padding-left: 5px; /* added unit */
+}
 
-  .main-header_itemList {
-    list-style: none;
-    margin: 1rem;
-    padding: 0%;
-    display: flex;
-    color: rgb(105, 105, 105);
-  }
-  .main-header_listItem {
-    margin: 0%;
-    padding: 0%;
-  }
+.main-header_itemList {
+  list-style: none;
+  margin: 1rem;
+  padding: 0;
+  display: flex;
+  color: rgb(105, 105, 105);
+}
 
-  .main-header_listItem a {
-    color: rgb(94, 39, 39);
-    text-decoration: none;
-    margin: 1rem;
-  }
+.main-header_listItem {
+  margin: 0;
+  padding: 0;
+}
 
-  .main-header_nav {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    margin: 1rem;
-  }
+.main-header_listItem a {
+  color: rgb(238, 226, 232);
+  text-decoration: none;
+  margin: 1rem;
+}
 
-  .main-header_listItem a:hover,
-  .main-header_listItem a:active,
-  .main-header_listItem a:active {
-    color: rgb(21, 163, 115);
-  }
-  main {
-    padding: 1rem;
-  }
-  .body {
-    background-color: rgb(239, 239, 239);
-  }
-  .main-header_listItem a {
-    color: rgb(238, 226, 232);
-    text-decoration: none;
-    margin: 1rem;
-  }
+.main-header_listItem a:hover,
+.main-header_listItem a:active {
+  color: rgb(21, 163, 115);
+}
+
+.main-header_nav {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin: 1rem;
+}
+
+main {
+  padding: 1rem;
+}
+
+.body {
+  background-color: rgb(239, 239, 239);
+}
+
+.formControl {
+  margin: 1rem 0;
+}
+
+.formControl label,
+.formControl input {
+  display: block;
+  color: rgb(44, 39, 70);
+}
+
+.formControl input {
+  border-color: 3px rgb(138, 138, 138);
+  font: inherit;
+  border-radius: 5px;
+}
+
+button {
+  font: inherit;
+  color: rgb(224, 224, 224);
+  border-color: 1px rgb(73, 73, 45);
+  background-color: rgb(56, 67, 77);
+  cursor: pointer;
+  padding: 2%;
+  border-radius: 5px;
+  display: block;
+  margin: 20px auto; 
+}
+
+button:hover,
+button:active {
+  background-color: aquamarine;
+}
+
+.productForm {
+  width: 20rem;
+  max-width: 90%;
+  margin: auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  margin: 1rem;
+  border: 1px solid rgb(194, 194, 194);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 10px rgba(0, 0, 0);
+}
