chore: convert html to pug & create layout :zap:

--- a/views/addProduct.pug
+++ b/views/addProduct.pug
@@ -1,26 +1,5 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Add Product
-    link(rel="stylesheet", href="/css/products.css")
-
-  body.body
-    header.main-header
-      nav.main-header_nav
-        ul.main-header_itemList
-          li.main-header_listItem
-            a(href="/") Home
-          li.main-header_listItem
-            a.active(href="add-product") Add Product
-          li.main-header_listItem
-            a(href="cart") Cart
-          li.main-header_listItem
-            a(href="signUp") Sign Up
-
-    main
+extends layout/mainLayout.pug 
+block content 
       form.productForm(action="/added-products", method="POST")
         div.formControl
           h1
