--- a/views/cart.pug
+++ b/views/cart.pug
@@ -1,24 +1,5 @@
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Shop Homepage
-    link(rel="stylesheet", href="/css/cart.css")
-
-  body.body
-    header.main-header
-      nav.main-header_nav
-        ul.main-header_itemList
-          li.main-header_listItem
-            a.active(href="/") Home
-          li.main-header_listItem
-            a(href="add-product") Add Product
-          li.main-header_listItem
-            a(href="cart") Cart
-          li.main-header_listItem
-            a(href="signUp") Sign Up
-
+extends layout/mainLayout.pug 
+block content 
     main
       h1 Shopping cart
       p Here are the Lists of Choosen Items
