--- a/views/home.pug
+++ b/views/home.pug
@@ -1,23 +1,5 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title #{docTitle}
-        link(rel="stylesheet", href="/css/main.css")
-
-    body 
-        header.main-header
-            nav.main-header_nav
-                ul.main-header_itemList
-                    li.main-header_listItem
-                        a.active(href="/") Home 
-                    li.main-header_listItem
-                        a(href="/add-Product") Add Product
-                    li.main-header_listItem
-                        a(href="/cart") Cart 
-                    li.main-header_listItem
-                        a(href="/signUp") Sign Up 
+extends layout/mainLayout.pug 
+block content 
         main
             h1 My Products
             p List of all the products...
