update title :zap:

--- a/views/layout/mainLayout.pug
+++ b/views/layout/mainLayout.pug
@@ -13,7 +13,7 @@ html(lang="en")
           li.main-header_listItem
             a(href="/") Home
           li.main-header_listItem
-            a(href="add-product") Add Product
+            a(href="add-product", class=(path === "/add-Product" ? 'active' : '')) Add Product
           li.main-header_listItem
             a(href="cart") Cart
           li.main-header_listItem
