--- a/views/layout/mainLayout.pug
+++ b/views/layout/mainLayout.pug
@@ -11,11 +11,14 @@ html(lang="en")
       nav.main-header_nav
         ul.main-header_itemList
           li.main-header_listItem
-            a(href="/") Home
+            a(href="/", class=(path === "/" ? 'active' : '')) Home
           li.main-header_listItem
+            a(href="products", class=(path === "/products" ? 'active' : '')) Products 
+          li.main-header_listItem
+            a(href="cart", class=(path === "/cart" ? 'active' : '')) Cart
+          li.main-header_listItem
+            a(href="signUp", class=(path === "/signUp" ? 'active' : '')) Sign Up
+          li.main-header_listItem
+
             a(href="add-product", class=(path === "/add-Product" ? 'active' : '')) Add Product
-          li.main-header_listItem
-            a(href="cart") Cart
-          li.main-header_listItem
-            a(href="signUp") Sign Up
 block content
