--- a/publicViews/css/main.css
+++ b/publicViews/css/main.css
@@ -100,6 +100,9 @@ form {
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0 0 10px rgb(0, 0, 0);
+  display: flexbox;
+  align-content: center;
+  margin: auto;
 }
 
 .product-item {
